--- a/config/west.yml
+++ b/config/west.yml
@@ -2,12 +2,17 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
-    # Additional modules containing boards/shields/custom code can be listed here as well
-    # See https://docs.zephyrproject.org/3.2.0/develop/west/manifest.html#projects
+    - name: anywhy
+      url-base: https://github.com/anywhy-io
   projects:
     - name: zmk
       remote: zmkfirmware
       revision: main
       import: app/west.yml
+    - name: flake-zmk-module
+      remote: anywhy
+      revision: main
+      path: modules/flake-zmk-module
+      import: config/west.yml
   self:
     path: config
