test build fix 2

--- a/config/west.yml
+++ b/config/west.yml
@@ -12,7 +12,6 @@ manifest:
     - name: flake-zmk-module
       remote: anywhy
       revision: main
-      path: modules/flake-zmk-module
-      import: config/west.yml
+      import: west.yml
   self:
     path: config
