test import west.yml path

--- a/config/west.yml
+++ b/config/west.yml
@@ -12,6 +12,6 @@ manifest:
     - name: flake-zmk-module
       remote: anywhy
       revision: main
-      import: west.yml
+      import: config/west.yml
   self:
     path: config
