--- a/build.yaml
+++ b/build.yaml
@@ -18,10 +18,8 @@
 #
 ---
 include:
-  - board: nice_nano_v2
-    shield: anywhy_flake_left
+  - shield: anywhy_flake_left
+    board: nice_nano_v2
     snippet: studio-rpc-usb-uart
-  - board: nice_nano_v2
-    shield: anywhy_flake_right
-  - board: nice_nano_v2
-    shield: settings_reset
+  - shield: anywhy_flake_right
+    board: nice_nano_v2
