--- a/build.yaml
+++ b/build.yaml
@@ -23,3 +23,5 @@ include:
     snippet: studio-rpc-usb-uart
   - shield: anywhy_flake_right
     board: nice_nano_v2
+  - shield: settings_reset
+    board: nice_nano_v2
