Revert "chore: ignore locally generated svg file"
This reverts commit 076cedc1f1cce115bac53095452b4c53f23252e8.

--- a/.gitignore
+++ b/.gitignore
@@ -20,4 +20,4 @@ app/.cache/
 # keymap-drawer
 config/anywhy_flake.json
 config/anywhy_flake.yaml
-keymap-drawer/anywhy_flake.svg
+config/anywhy_flake_keymap.yaml
