fix(ci): fix west module path in workflow config

--- a/.github/workflows/draw-keymaps.yml
+++ b/.github/workflows/draw-keymaps.yml
@@ -25,7 +25,7 @@ jobs:
       # 3) Fetch your flake-zmk-module via West (which brings in anywhy_flake.json)
       west_config_path: "config"
       # 4) Point at the module checkout for the JSON layouts
-      json_path: ".west/modules/anywhy-io/flake-zmk-module"
+      json_path: "flake-zmk-module"
       # 5) Force small_layout so it matches your 40-key map
       draw_args: "anywhy_flake:'-l small_layout'"
       # 6) Emit both YAML+SVG into keymap-drawer/
