feat(keymap): implement magic-shift-key; migrate GAC to CAG thumbs

--- a/keymap-drawer/keymap_drawer.config.yaml
+++ b/keymap-drawer/keymap_drawer.config.yaml
@@ -30,6 +30,9 @@ parse_config:
     # Modifiers
     "&caps_word": $$mdi:alpha-w-box$$
 
+    # Custom Behaviours
+    "&magic_sft": $$mdi:arrow-up-bold-hexagon-outline$$
+
     # Reset
     "&sys_reset":
       type: bootloader
