--- a/build.yaml
+++ b/build.yaml
@@ -18,6 +18,8 @@
 #
 ---
 include:
+  - board: seeeduino_xiao_ble
+    shield: anywhy_flake_dongle prospector_adapter
   - shield: anywhy_flake_left
     board: nice_nano_v2
     snippet: studio-rpc-usb-uart
