fix(build): minor fixes

--- a/config/anywhy_flake.conf
+++ b/config/anywhy_flake.conf
@@ -6,8 +6,8 @@ CONFIG_ZMK_PM_SOFT_OFF=y
 
 # Name it nicely
 CONFIG_USB_DEVICE_MANUFACTURER="AnyWhy"
-CONFIG_ZMK_KEYBOARD_NAME="AnyWhy Flake S + Prospector"
-CONFIG_USB_DEVICE_PRODUCT="AnyWhy Flake S + Prospector"
+CONFIG_ZMK_KEYBOARD_NAME="FlakeS+Dongle"
+CONFIG_USB_DEVICE_PRODUCT="FlakeS+Dongle"
 
 # ZMK Studio
 
