--- a/build.yaml
+++ b/build.yaml
@@ -19,7 +19,7 @@
 ---
 include:
   - board: seeeduino_xiao_ble
-    shield: anywhy_flake_dongle prospector_adapter
+    shield: prospector_adapter
   - shield: anywhy_flake_left
     board: nice_nano_v2
     snippet: studio-rpc-usb-uart
