try last fixes to make this shit finally work

--- a/.github/workflows/draw-keymaps.yml
+++ b/.github/workflows/draw-keymaps.yml
@@ -9,7 +9,7 @@ on:
   pull_request:
     types: [opened, reopened, synchronize]
     paths:
-      - "config/*.keymap"
+      - "config/anywhy_flake.keymap"
       - "keymap-drawer/**"
 
 jobs:
