try setting it in conf file too

--- a/config/anywhy_flake_dongle.conf
+++ b/config/anywhy_flake_dongle.conf
@@ -10,3 +10,8 @@ CONFIG_BT_MAX_PAIRED=7
 
 # Disable ZMK Studio
 CONFIG_ZMK_STUDIO=n
+
+# make the dongle a split-BLE central with two peripherals
+CONFIG_ZMK_SPLIT=y
+CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=2
