--- a/config/anywhy_flake.conf
+++ b/config/anywhy_flake.conf
@@ -3,11 +3,15 @@ CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
 CONFIG_ZMK_PM_SOFT_OFF=y
+# Timeout till idle state 3 minutes
+CONFIG_ZMK_IDLE_TIMEOUT=180000
+# Timeout till deep-sleep 30 minutes
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 
 # Name it nicely
-CONFIG_USB_DEVICE_MANUFACTURER="AnyWhy"
-CONFIG_ZMK_KEYBOARD_NAME="AnyWhy Flake S"
-CONFIG_USB_DEVICE_PRODUCT="AnyWhy Flake S"
+CONFIG_USB_DEVICE_MANUFACTURER="AnyWhy Flake S"
+CONFIG_ZMK_KEYBOARD_NAME="DeckInput‑v3" # BT name
+CONFIG_USB_DEVICE_PRODUCT="DeckInpu‑v3" # USB name
 
 # ZMK Studio
 
