docs: make the sticky RALT make sense in the keymap

--- a/keymap-drawer/keymap_drawer.config.yaml
+++ b/keymap-drawer/keymap_drawer.config.yaml
@@ -35,6 +35,9 @@ parse_config:
     "&sk LG(LC(LA(LSHIFT)))":
       tap:   "$$mdi:rhombus-split-outline$$"
       hold:  "$$tabler:pin$$"
+    "&sm RALT RALT":
+      tap:   "$$mdi:apple-keyboard-option$$"
+      hold:  "$$tabler:pin$$"
 
     # Custom Behaviours
     "&tdsc": $$mdi:format-letter-case-upper$$
