feat(build): update build.yaml for dongle and YADS integration
Adds dongle build artifact with dongle_screen shield and updates peripheral cmake-args for split configuration. Includes artifact-names for clarity.

Signed-off-by: Tony Fischer (tku137) <tku137@mailbox.org>

--- a/build.yaml
+++ b/build.yaml
@@ -20,8 +20,16 @@
 include:
   - shield: anywhy_flake_left
     board: nice_nano_v2
+    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
     snippet: studio-rpc-usb-uart
+    artifact-name: flake-left
   - shield: anywhy_flake_right
     board: nice_nano_v2
+    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+    artifact-name: flake-right
+  - shield: anywhy_flake_dongle dongle_screen
+    board: seeeduino_xiao_ble
+    artifact-name: flake-dongle-screen
   - shield: settings_reset
-    board: nice_nano_v2
+    board: seeeduino_xiao_ble
+    artifact-name: flake-dongle-reset
