feat(config): add dongle brightness keys

--- a/keymap-drawer/keymap_drawer.config.yaml
+++ b/keymap-drawer/keymap_drawer.config.yaml
@@ -168,6 +168,8 @@ parse_config:
     NUHS: "#"
     TILDE2: "~"
     GLOBE: $$mdi:web$$
+    F23: $$mdi:square-rounded$$
+    F24: $$mdi:square-rounded-outline$$
 
     # Numbers
     # N1:
