--- a/config/anywhy_flake_dongle.conf
+++ b/config/anywhy_flake_dongle.conf
@@ -14,3 +14,6 @@ CONFIG_DONGLE_SCREEN_LAYER_ACTIVE=y
 CONFIG_DONGLE_SCREEN_OUTPUT_ACTIVE=y
 CONFIG_DONGLE_SCREEN_BATTERY_ACTIVE=y
 
+# Let the dongle (central) fetch and proxy the peripherals battery levels
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
