fix: build shield name

--- a/build.yaml
+++ b/build.yaml
@@ -26,7 +26,7 @@ include:
     board: nice_nano_v2
     cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
     artifact-name: flake-right
-  - shield: anywhy_flake_dongle dongle_screen
+  - shield: flake_screen_dongle dongle_screen
     snippet: studio-rpc-usb-uart
     board: seeeduino_xiao_ble
     artifact-name: flake-dongle-screen
