--- a/build.yaml
+++ b/build.yaml
@@ -29,7 +29,7 @@ include:
   - shield: anywhy_flake_dongle dongle_screen
     snippet: studio-rpc-usb-uart
     board: seeeduino_xiao_ble
-    cmake-args: -DCONFIG_ZMK_STUDIO=y
+    cmake-args: -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
     artifact-name: anywhy_flake_dongle
   - shield: settings_reset
     board: seeeduino_xiao_ble
