fix: try another config fix

--- a/config/anywhy_flake_dongle.conf
+++ b/config/anywhy_flake_dongle.conf
@@ -14,6 +14,28 @@ CONFIG_DONGLE_SCREEN_LAYER_ACTIVE=y
 CONFIG_DONGLE_SCREEN_OUTPUT_ACTIVE=y
 CONFIG_DONGLE_SCREEN_BATTERY_ACTIVE=y
 
+# Force donge central
+CONFIG_ZMK_SPLIT=y
+CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=2
+CONFIG_BT_MAX_CONN=7
+CONFIG_BT_MAX_PAIRED=7
+
 # Let the dongle (central) fetch and proxy the peripherals battery levels
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+
+# ZMK stuff
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_PM_SOFT_OFF=y
+CONFIG_ZMK_STUDIO=y
+CONFIG_ZMK_STUDIO_LOCKING=n
+CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
+CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
+CONFIG_ZMK_IDLE_TIMEOUT=180000
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
+
+# Display Name
+CONFIG_USB_DEVICE_MANUFACTURER="AnyWhy Flake S"
+CONFIG_ZMK_KEYBOARD_NAME="DeckInputV4"
+CONFIG_USB_DEVICE_PRODUCT="DeckInputV4"
