--- a/config/anywhy_flake.conf
+++ b/config/anywhy_flake.conf
@@ -9,12 +9,15 @@ CONFIG_ZMK_IDLE_TIMEOUT=180000
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 
 # Name it nicely
-CONFIG_USB_DEVICE_MANUFACTURER="AnyWhy Flake S"
-CONFIG_ZMK_KEYBOARD_NAME="DeckInput‑v3" # BT name
-CONFIG_USB_DEVICE_PRODUCT="DeckInpu‑v3" # USB name
+# CONFIG_USB_DEVICE_MANUFACTURER="AnyWhy Flake S"
+# CONFIG_ZMK_KEYBOARD_NAME="DeckInput‑v3" # BT name
+# CONFIG_USB_DEVICE_PRODUCT="DeckInpu‑v3" # USB name
 
 # ZMK Studio
 
 CONFIG_ZMK_STUDIO=y
 # dont use lock key to unlock studio for now
 CONFIG_ZMK_STUDIO_LOCKING=n
+
+CONFIG_ZMK_SPLIT=y
+CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
