try without studio?

--- a/config/anywhy_flake.conf
+++ b/config/anywhy_flake.conf
@@ -15,9 +15,9 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 
 # ZMK Studio
 
-CONFIG_ZMK_STUDIO=y
+# CONFIG_ZMK_STUDIO=y
 # dont use lock key to unlock studio for now
-CONFIG_ZMK_STUDIO_LOCKING=n
+# CONFIG_ZMK_STUDIO_LOCKING=n
 
 CONFIG_ZMK_SPLIT=y
 CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
