fix: proper naming of device

--- a/config/anywhy_flake.conf
+++ b/config/anywhy_flake.conf
@@ -10,8 +10,8 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 
 # Name it nicely
 CONFIG_USB_DEVICE_MANUFACTURER="AnyWhy Flake S"
-CONFIG_ZMK_KEYBOARD_NAME="DeckInput‑v3" # BT name
-CONFIG_USB_DEVICE_PRODUCT="DeckInpu‑v3" # USB name
+CONFIG_ZMK_KEYBOARD_NAME="DeckInputV3" # BT name
+CONFIG_USB_DEVICE_PRODUCT="DeckInputV3" # USB name
 
 # ZMK Studio
 
